# ApertureIO

./: .gitmodules  CMakeLists.txt  README.md  conanfile.txt  idea.txt
ApertureIO/: CMakeLists.txt  conanfile.txt
ApertureIO/Base/: BufferLayout.cpp  Buffers.cpp  CMakeLists.txt  Command.cpp  Context.cpp  Device.cpp  FrameBuffer.cpp  RenderContext.cpp  Shader.cpp  Texture.cpp
ApertureIO/Base/Include/ApertureIO/: BufferLayout.hpp  Buffers.hpp  Command.hpp  Context.hpp  Device.hpp  FrameBuffer.hpp  Handles.hpp  RenderContext.hpp  Shader.hpp  Texture.hpp
ApertureIO/Common/: CMakeLists.txt  FileIO.cpp  GenericFileManager.cpp  Logger.cpp
ApertureIO/Common/Include/ApertureIO/: FileIO.hpp  GenericFileManager.hpp  Logger.hpp  Pointers.hpp
ApertureIO/RenderGraph/: CMakeLists.txt  RenderGraph.cpp  RenderPass.cpp
ApertureIO/RenderGraph/Include/ApertureIO/: RenderGraph.hpp  RenderPass.hpp
ApertureIO/RenderGraph/Passes/: AsciiImage.cpp  BasicRenderPass.cpp  CMakeLists.txt  CameraManager.cpp  MergeLayers.cpp  PhongLighting.cpp  ReadAssimp.cpp  ViewportGrid.cpp
ApertureIO/RenderGraph/Passes/Include/ApertureIO/: AsciiImage.hpp  BasicRenderPass.hpp  CameraManager.hpp  MergeLayers.hpp  PhongLighting.hpp  ReadAssimp.hpp  ViewportGrid.hpp
ApertureIO/RenderGraph/RenderGraph/: CMakeList.txt  CMakeLists.txt  Knob.cpp  Port.cpp  RenderEngine.cpp  RenderGraph.cpp  RenderPass.cpp  RenderPassFactory.cpp
ApertureIO/RenderGraph/RenderGraph/Include/ApertureIO/: Knob.hpp  Port.hpp  RenderEngine.hpp  RenderGraph.hpp  RenderPass.hpp  RenderPassFactory.hpp
ApertureIO/Vulkan/: CMakeLists.txt  VulkanBuffers.cpp  VulkanCmdPool.cpp  VulkanCommand.cpp  VulkanCommon.cpp  VulkanContext.cpp  VulkanDevice.cpp  VulkanFrameBuffer.cpp  VulkanImage.cpp  VulkanSemaphorePool.cpp  VulkanShader.cpp  VulkanTexture.cpp
ApertureIO/Vulkan/Include/ApertureIO/: VulkanBuffers.hpp  VulkanCmdPool.hpp  VulkanCommand.hpp  VulkanCommon.hpp  VulkanContext.hpp  VulkanDevice.hpp  VulkanFrameBuffer.hpp  VulkanImage.hpp  VulkanSemaphorePool.hpp  VulkanShader.hpp  VulkanTexture.hpp
ApertureIO/Window/: CMakeLists.txt  Window.cpp
ApertureIO/Window/Include/ApertureIO/: Window.hpp
ApertureIOEditor/: CMakeLists.txt
ApertureIOEditor/Application/: Application.cpp  CMakeLists.txt
ApertureIOEditor/Application/include/Application/: Application.hpp
EditorApplication/: CMakeLists.txt
EditorApplication/Application/: Application.cpp  CMakeLists.txt
EditorApplication/Application/include/Application/: Application.hpp
EditorApplication/EditorApplication/: CMakeLists.txt  main.cpp
SavedGraphs/: EmptyViewport.json  TestGraph_v001.json
Shaders/: ApertureIO.glsl  AsciiImage.glsl  Basic.glsl  MergeLayers.glsl  PhongLighting.glsl  ReadAssimp.glsl  ViewportGrid.glsl
TestApplication/: CMakeLists.txt  conanfile.txt
TestApplication/TestApplication/: CMakeLists.txt  main.cpp
TestApplication/Window/: CMakeLists.txt  WindowGLFWImpl.cpp  WindowQtImpl.cpp
TestApplication/Window/include/: Window.hpp
TestApplication/Window/include/Window/: Window.hpp  WindowGLFWImpl.hpp  WindowQtImpl.hpp
cmake/: CMakeLists.txt  conanfile.txt
misc/: idea.txt
src/: ApertureIO.hpp  main.cpp
src/App/: Window.cpp  Window.hpp
src/Base/: Buffer.hpp  BufferLayout.cpp  BufferLayout.hpp  Buffers.cpp  Buffers.hpp  Command.cpp  Command.hpp  Context.cpp  Context.hpp  Device.cpp  Device.hpp  FrameBuffer.cpp  FrameBuffer.hpp  RenderContext.cpp  RenderContext.hpp  Shader.cpp  Shader.hpp
src/Common/: FileIO.cpp  FileIO.hpp  Logger.cpp
src/Shaders/: Basic.glsl  SolidColour.glsl
src/Vulkan/: VulkanBuffers.cpp  VulkanBuffers.hpp  VulkanCommand.cpp  VulkanCommand.hpp  VulkanCommon.hpp  VulkanContext.cpp  VulkanContext.hpp  VulkanDevice.cpp  VulkanDevice.hpp  VulkanFrameBuffer.cpp  VulkanFrameBuffer.hpp  VulkanShader.cpp  VulkanShader.hpp
